Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -24,15 +24,15 @@
     {
       "id": "tt36592690",
       "type": "series",
-      "name": "Kaoru Hana wa Rin to Saku",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181444-rAYxHcmAtBKT.jpg",
+      "name": "The Fragrant Flower Blooms With Dignity",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181444-otw74fBzACfB.jpg",
       "description": "Genres: Comedy, Drama, Romance\nTags:Heterosexual/Primarily Teen Cast/Urban/School/Shounen/Food/Male Protagonist/Female Protagonist/Ensemble Cast/Iyashikei/Delinquents\nChidori High is a boys’ school that takes in the dregs of society with the lowest grades. Next door stands Kikyo Girls’ High, where the wealthy, high-class families send their precious daughters. Chidori second-year Rintaro, who has a fierce face but a gentle heart, is helping at his family’s patisserie when he meets a girl named Kaoruko. The two hit it off right away…but this blissful peace is quickly disturbed when Rintaro discovers that Kaoruko is actually a student at Kikyo. Worse, she doesn’t seem to realize what a huge problem this really is! Will these two be able to forge a path for themselves, and sidestep the traps (metaphorical and literal) laid by their classmates?\n<br><br>\n(Source: Kodansha USA)"
     },
     {
       "id": "tt32612521",
       "type": "series",
       "name": "Gachiakuta",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178025-x5UuicfDH0xk.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178025-cWJKEsZynkil.jpg",
       "description": "Genres: Action, Drama, Fantasy\nTags:Shounen/Urban Fantasy/Dystopian/Male Protagonist/Super Power/Ensemble Cast/Post-Apocalyptic/Revenge/Survival\nA boy lives in a floating town, where the poor scrape by and the rich live a sumptuous life, simply casting their garbage off the side, into the abyss. When he’s falsely accused of murder, though, his wrongful conviction leads to an unimaginable punishment—exile off the edge, with the rest of the trash. Down on the surface, the cast-off waste of humanity has bred vicious monsters, and to travel the path to vengeance against those who cast him into Hell, a boy will have to become a warrior…\n<br><br>\n(Source: Kodansha USA)"
     },
     {
@@ -155,11 +155,11 @@
       "description": "Genres: Drama, Psychological, Sci-Fi\nTags:Bullying/Denpa/Shounen/Female Protagonist/Aliens\nTakopi travels from his home of Happy Planet to spread happiness across Earth, but meets the unsmiling Shizuka upon landing. Her friends at school and home life seem to be the source of her somber expression—and the pure-hearted Takopi is determined to change things for the better! But what truths await him when the curtains rise in this shocking drama?!\n<br><br>\n(Source: MANGA Plus)"
     },
     {
-      "id": "tt33050376",
+      "id": "tt32731400",
       "type": "series",
-      "name": "Tsuyokute New Saga",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx155838-0zx6MTeoo5sk.jpg",
-      "description": "Genres: Adventure, Fantasy\nTags:Female Harem/Male Protagonist/Demons/Dragons\nAfter a fierce battle, Magic swordsman Kyle finally killed the Demon Lord after being seriously injured in the battle. Kyle on the verge of death approaches a relic which was in possession of the Demon Lord and it sends him to the past. After recovering from the initial shock, he decides to use this opportunity to avoid making the same mistakes of the past and become stronger.\n<br><br>\n<i>Note: Initially scheduled for July 2023, the anime saw several delays and a complete change in Director (previously Norikazu Ishigooka) and Studio (previously Yokohama Anime Lab x Makaria) <i/>"
+      "name": "Isekai Mokushiroku Mynoghra: Hametsu no Bunmei de Hajimeru Sekai Seifuku",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178433-8KzNsjTmdAvw.jpg",
+      "description": "Genres: Action, Adventure, Comedy, Drama, Fantasy, Romance\nTags:Isekai\nTakuto Ira succumbed to illness at a young age and ended up reincarnating in a world that resembles the fantasy turn-based strategy game Eternal Nations. Not only did he reincarnate into his favorite game, but as the god who commands the evil civilization Mynoghra. With Mynoghra's beautiful hero unit, Sludge Witch Atou by his side, not even legendarily difficult race traits will stand in the way of restarting their civilization! “Lord Takuto…won't you start over with me?” Explore, Expand, Exploit, Exterminate! A tactical fantasy world is waiting for heroes like you! Join Eternal Nations today!\n<br><br>\n(Source: Cross Infinite World)"
     },
     {
       "id": "tt36592736",
@@ -169,11 +169,11 @@
       "description": "Genres: Action, Adventure, Fantasy\nTags:Isekai/Magic/Survival\nRyou is delighted to be reincarnated into the fantastical world of Phi, where he thinks he’ll get to live a quiet life learning to use his newfound water magic. Going with the flow here, however, means something very different. Ryou is immediately pitted against the wild lands he winds up in and the slew of deadly monsters that call the remote subcontinent home. You’d think he’d forget about taking it easy when he’s stuck fighting for his life, but lucky for Ryou, he’s naturally optimistic, clever, and blessed with the hidden “Eternal Youth” trait. Twenty years pass in the blink of an eye, and each encounter along the way pushes him one step closer to the pinnacle of human magic. Little does he realize that’s only the opening chapter of his tale. A fateful meeting soon thrusts Ryou to the forefront of history, forever changing the course of his life... Thus begins the adventures of the strongest water magician the world has ever seen—who also likes to do things at his own pace!<br>\n<br>\n(Source: J-Novel Club)"
     },
     {
-      "id": "tt32731400",
+      "id": "tt33050376",
       "type": "series",
-      "name": "Isekai Mokushiroku Mynoghra: Hametsu no Bunmei de Hajimeru Sekai Seifuku",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178433-mYjhRiwo4N8c.jpg",
-      "description": "Genres: Action, Adventure, Comedy, Drama, Fantasy, Romance\nTags:Isekai\nTakuto Ira succumbed to illness at a young age and ended up reincarnating in a world that resembles the fantasy turn-based strategy game Eternal Nations. Not only did he reincarnate into his favorite game, but as the god who commands the evil civilization Mynoghra. With Mynoghra's beautiful hero unit, Sludge Witch Atou by his side, not even legendarily difficult race traits will stand in the way of restarting their civilization! “Lord Takuto…won't you start over with me?” Explore, Expand, Exploit, Exterminate! A tactical fantasy world is waiting for heroes like you! Join Eternal Nations today!\n<br><br>\n(Source: Cross Infinite World)"
+      "name": "Tsuyokute New Saga",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx155838-0zx6MTeoo5sk.jpg",
+      "description": "Genres: Adventure, Fantasy\nTags:Female Harem/Male Protagonist/Demons/Dragons\nAfter a fierce battle, Magic swordsman Kyle finally killed the Demon Lord after being seriously injured in the battle. Kyle on the verge of death approaches a relic which was in possession of the Demon Lord and it sends him to the past. After recovering from the initial shock, he decides to use this opportunity to avoid making the same mistakes of the past and become stronger.\n<br><br>\n<i>Note: Initially scheduled for July 2023, the anime saw several delays and a complete change in Director (previously Norikazu Ishigooka) and Studio (previously Yokohama Anime Lab x Makaria) <i/>"
     },
     {
       "id": "tt35324821",
@@ -218,18 +218,18 @@
       "description": "Genres: Comedy\nTags:School/Female Protagonist/Primarily Female Cast/Cute Girls Doing Cute Things/Primarily Teen Cast/Delinquents/Yuri/LGBTQ+ Themes\nThe story follows Yuu Yutani, a first-year high school student who is a good girl. However, to attract the attention of the school's disciplinary committee chairman and \"madonna\" Atori Mizutori, she begins to act like a delinquent.<br>\n<br>\n(Source: Anime News Network)"
     },
     {
-      "id": "tt36592820",
-      "type": "series",
-      "name": "Scooped Up by an S-Rank Adventurer!",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179885-m1nu1QvnRmII.jpg",
-      "description": "Genres: Action, Adventure, Fantasy\nTags:Magic/Dungeon\n<i>\"We don’t need a useless white mage.”</i>\n<br><br>\nLloyd is a white mage who was unexpectedly banished from the hero’s party. As he was lost and uncertain, he happened to cross paths with an S-rank adventurer party in need of a white mage, so he joined them on their quest. Little did anyone know at the time that the hero’s party would fall apart and Lloyd would rise to fame.\n<br><br>\nThis is a story about an unmatched support magic user, who believes himself to be ordinary, becoming an unstoppable adventurer.<br><br>\n(Source: Crunchyroll)"
-    },
-    {
       "id": "tt32535912",
       "type": "series",
       "name": "Watari-kun's ****** Is about to Collapse",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169420-ZnJA9y23b4ee.png",
       "description": "Genres: Comedy, Drama, Romance, Slice of Life\nTags:Love Triangle/School/Female Harem/Kuudere/Yandere\nNaoto Watari lives solely for his little sister, Suzushiro, until his chaotic childhood friend, Satsuki, storms back into his life. Without uttering a single word, her very presence ignites buried memories and unravels his rigid routine. As tensions rise and secrets surface, Naoto’s devotion to Suzushiro clashes with unresolved pain, threatening to collapse his fragile world.<br>\n<br>\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt36592820",
+      "type": "series",
+      "name": "Scooped Up by an S-Rank Adventurer!",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179885-m1nu1QvnRmII.jpg",
+      "description": "Genres: Action, Adventure, Fantasy\nTags:Magic/Dungeon\n<i>\"We don’t need a useless white mage.”</i>\n<br><br>\nLloyd is a white mage who was unexpectedly banished from the hero’s party. As he was lost and uncertain, he happened to cross paths with an S-rank adventurer party in need of a white mage, so he joined them on their quest. Little did anyone know at the time that the hero’s party would fall apart and Lloyd would rise to fame.\n<br><br>\nThis is a story about an unmatched support magic user, who believes himself to be ordinary, becoming an unstoppable adventurer.<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt35995444",
@@ -344,11 +344,11 @@
       "description": "Genres: Action, Comedy, Fantasy\nTags:Female Harem\nHero Toto possesses great skills, but his extreme shyness has left him unable to form a party, causing him to remain stuck in the town where his journey began.\n<br><br>\nOne day, he is suddenly invited to join a party by three beautiful women—Ciel, Anemone, and Gore. Overjoyed at finally setting off on an adventure, Toto is filled with excitement... but little does he know, these women are dead set on killing him!\n<br><br>\nA deathly harem romcom unfolds as the socially anxious hero, who faints from mere flustered excitement around women, finds himself the target of three deadly companions, each with their own reasons for wanting him gone!"
     },
     {
-      "id": "tt32463887",
+      "id": "kitsu:48476",
       "type": "series",
-      "name": "9-nine- Shihaisha no Oukan",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177761-do0GDaRnt6gB.jpg",
-      "description": "Genres: Mystery, Supernatural\nTags:Male Protagonist/Female Harem\n9-nine- is a tale of the town of Shiromitsugawa, host to mysterious Artifacts and the superpowers they bestow on their Users. A tale of growing trust and budding romance between the protagonist and the heroine, and also a murder mystery where they hunt down the culprit behind a series of supernatural murders.<br><br>\n(Source: Steam Description)"
+      "name": "Nukitashi THE ANIMATION",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx174188-fZg8iePD9Dca.jpg",
+      "description": "Genres: Comedy, Drama, Ecchi, Romance\nTags:Coastal/Primarily Teen Cast/Male Protagonist/Nudity/School/Primarily Female Cast\nSeiran Island. Even here in paradise, there are those who work in the shadows to bring it down...\n<br><br>\nUnited, these misfits stand side by side as the secret society NLNS. As their founder and head honcho, I, Junnosuke Tachibana, won’t stop until we’ve crushed this crazy law once and for all!\n<br><br>\nI’ve even found a benefactor in this crusty old rich guy, name unknown... He’s hooked us up with a secret base and a buttload of cash already. In return, he wants us to find someone and “protect her at all costs.” Apparently, she holds the key to our mission’s success...?\n<br><br>\nIn which case, there’s only one thing to do: locate this mystery girl. And all while keeping the SHO off our scent, too...\n<br><br>\nMake no mistake! I’ll stop that law in its tracks, just wait and see!\n<br><br>\n(Source: Steam)"
     }
   ]
 }
