Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -25,7 +25,7 @@
       "id": "tt36592690",
       "type": "series",
       "name": "The Fragrant Flower Blooms With Dignity",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181444-otw74fBzACfB.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181444-vmtWANHhtVaB.jpg",
       "description": "Genres: Comedy, Drama, Romance\nTags:Heterosexual/Primarily Teen Cast/Urban/School/Shounen/Food/Male Protagonist/Female Protagonist/Ensemble Cast/Iyashikei/Delinquents\nChidori High is a boys’ school that takes in the dregs of society with the lowest grades. Next door stands Kikyo Girls’ High, where the wealthy, high-class families send their precious daughters. Chidori second-year Rintaro, who has a fierce face but a gentle heart, is helping at his family’s patisserie when he meets a girl named Kaoruko. The two hit it off right away…but this blissful peace is quickly disturbed when Rintaro discovers that Kaoruko is actually a student at Kikyo. Worse, she doesn’t seem to realize what a huge problem this really is! Will these two be able to forge a path for themselves, and sidestep the traps (metaphorical and literal) laid by their classmates?\n<br><br>\n(Source: Kodansha USA)"
     },
     {
@@ -99,7 +99,7 @@
       "description": "Genres: Action, Adventure, Fantasy, Slice of Life\nTags:Isekai/Magic/Medieval\nThe second season of <i>Tensei Shitara Dai Nana Ouji Dattanode, Kimamani Majutsu wo Kiwamemasu</i>."
     },
     {
-      "id": "tt11448214",
+      "id": "kitsu:49033",
       "type": "series",
       "name": "Rent-a-Girlfriend Season 4",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179344-bKIcCKDWDJdO.png",
@@ -215,7 +215,7 @@
       "type": "series",
       "name": "Bad Girl",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178675-ABQbvWvnDvKh.png",
-      "description": "Genres: Comedy\nTags:School/Female Protagonist/Primarily Female Cast/Cute Girls Doing Cute Things/Primarily Teen Cast/Delinquents/Yuri/LGBTQ+ Themes\nThe story follows Yuu Yutani, a first-year high school student who is a good girl. However, to attract the attention of the school's disciplinary committee chairman and \"madonna\" Atori Mizutori, she begins to act like a delinquent.<br>\n<br>\n(Source: Anime News Network)"
+      "description": "Genres: Comedy\nTags:School/Female Protagonist/Primarily Female Cast/Cute Girls Doing Cute Things/Primarily Teen Cast/Yuri/Delinquents/LGBTQ+ Themes\nThe story follows Yuu Yutani, a first-year high school student who is a good girl. However, to attract the attention of the school's disciplinary committee chairman and \"madonna\" Atori Mizutori, she begins to act like a delinquent.<br>\n<br>\n(Source: Anime News Network)"
     },
     {
       "id": "tt32535912",
@@ -333,15 +333,8 @@
       "id": "tt35995459",
       "type": "series",
       "name": "Hotel Inhumans",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184034-EZEoi29Te3kS.jpg",
-      "description": "Genres: Action, Drama\nTags:Inn/Assassins/Female Protagonist\nThe most exquisite hotels in the world have certain standards: the finest food, the most sublime comfort, captivating entertainment, the latest weapons, reliable identity fabrication, and untraceable corpse disposal.\n<br><br>\nThe name of this place where the people who have “forgotten their humanity” visit is “Hotel Inhumans.” The hitmen guests are welcomed by the concierges who never say \"no.\""
-    },
-    {
-      "id": "tt35677101",
-      "type": "series",
-      "name": "Kizetsu Yuusha to Ansatsu Hime",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b186561-ZRHGIXr6JOSC.jpg",
-      "description": "Genres: Action, Comedy, Fantasy\nTags:Female Harem\nHero Toto possesses great skills, but his extreme shyness has left him unable to form a party, causing him to remain stuck in the town where his journey began.\n<br><br>\nOne day, he is suddenly invited to join a party by three beautiful women—Ciel, Anemone, and Gore. Overjoyed at finally setting off on an adventure, Toto is filled with excitement... but little does he know, these women are dead set on killing him!\n<br><br>\nA deathly harem romcom unfolds as the socially anxious hero, who faints from mere flustered excitement around women, finds himself the target of three deadly companions, each with their own reasons for wanting him gone!"
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184034-gjIi5TIHJpZv.jpg",
+      "description": "Genres: Action, Drama\nTags:Inn/Assassins/Female Protagonist/Male Protagonist\nThe most exquisite hotels in the world have certain standards: the finest food, the most sublime comfort, captivating entertainment, the latest weapons, reliable identity fabrication, and untraceable corpse disposal.\n<br><br>\nThe name of this place where the people who have “forgotten their humanity” visit is “Hotel Inhumans.” The hitmen guests are welcomed by the concierges who never say \"no.\""
     },
     {
       "id": "kitsu:48476",
@@ -349,6 +342,13 @@
       "name": "Nukitashi THE ANIMATION",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx174188-fZg8iePD9Dca.jpg",
       "description": "Genres: Comedy, Drama, Ecchi, Romance\nTags:Coastal/Primarily Teen Cast/Male Protagonist/Nudity/School/Primarily Female Cast\nSeiran Island. Even here in paradise, there are those who work in the shadows to bring it down...\n<br><br>\nUnited, these misfits stand side by side as the secret society NLNS. As their founder and head honcho, I, Junnosuke Tachibana, won’t stop until we’ve crushed this crazy law once and for all!\n<br><br>\nI’ve even found a benefactor in this crusty old rich guy, name unknown... He’s hooked us up with a secret base and a buttload of cash already. In return, he wants us to find someone and “protect her at all costs.” Apparently, she holds the key to our mission’s success...?\n<br><br>\nIn which case, there’s only one thing to do: locate this mystery girl. And all while keeping the SHO off our scent, too...\n<br><br>\nMake no mistake! I’ll stop that law in its tracks, just wait and see!\n<br><br>\n(Source: Steam)"
+    },
+    {
+      "id": "tt35677101",
+      "type": "series",
+      "name": "Kizetsu Yuusha to Ansatsu Hime",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b186561-ZRHGIXr6JOSC.jpg",
+      "description": "Genres: Action, Comedy, Fantasy\nTags:Female Harem\nHero Toto possesses great skills, but his extreme shyness has left him unable to form a party, causing him to remain stuck in the town where his journey began.\n<br><br>\nOne day, he is suddenly invited to join a party by three beautiful women—Ciel, Anemone, and Gore. Overjoyed at finally setting off on an adventure, Toto is filled with excitement... but little does he know, these women are dead set on killing him!\n<br><br>\nA deathly harem romcom unfolds as the socially anxious hero, who faints from mere flustered excitement around women, finds himself the target of three deadly companions, each with their own reasons for wanting him gone!"
     }
   ]
 }
