Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -190,18 +190,18 @@
       "description": "Genres: Adventure, Slice of Life\nTags:Cute Girls Doing Cute Things/Primarily Female Cast/Outdoor Activities/Female Protagonist/Seinen/Wilderness/Rural\nMineral collecting is like a modern-day treasure hunt!\n<br><br>\nRuri, a high school girl who loves jewelry and accessories, gets into the world of mineral collecting, venturing into mountains, rivers, and caves. The first volume features numerous minerals, including quartz, garnet, pyrite, gold sand, and fluorite. The manga is full of fascinating scenes focusing on specialized tools such as a panning dish, hammer, and topographical maps. An authentic scientific adventure based on the author's solid knowledge of mineralogy!\n<br><br>\n(Source: Harta, translated)"
     },
     {
-      "id": "tt36987898",
-      "type": "series",
-      "name": "Arknights: RISE FROM EMBER",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177175-uj13fUT8bqLD.jpg",
-      "description": "Genres: Action, Fantasy\nTags:Pandemic/Dystopian/War/Kemonomimi/Ensemble Cast\n\"She\" was supposed to be a beacon of hope. But now her anger and hatred have turned into flames of war and are about to engulf the people.\n<br><br>\nOnly Rhodes Island, a neutral organization, can stop Reunion's rampage and the conspiracy behind it. Amiya and the others head towards Chernobog's Core City, which is on a collision course with Lungmen. What fate awaits them there...\n<br><br>\n(Source: Official Site, translated, edited)"
-    },
-    {
       "id": "tt35335095",
       "type": "series",
       "name": "Solo Camping for Two",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185965-LlzTLSTBUbEA.jpg",
       "description": "Genres: Slice of Life\nTags:Camping/Seinen\nGen Kinokura, 34 years old.<br><br>\n\nA solitary camper who cherishes his alone time in nature, Gen enjoys his usual solo camping trips. However, he unexpectedly encounters Shizuku Kusano, a complete beginner in camping. Reluctantly, Gen ends up camping with Shizuku, despite it being the last thing he wanted to do.\n<br><br>\nWhat will become of Gen’s peaceful camping life now that it’s turned upside down by this new companion?<br><br>\n(Source: Pony Canyon)"
+    },
+    {
+      "id": "tt36987898",
+      "type": "series",
+      "name": "Arknights: RISE FROM EMBER",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177175-uj13fUT8bqLD.jpg",
+      "description": "Genres: Action, Fantasy\nTags:Pandemic/Dystopian/War/Kemonomimi/Ensemble Cast\n\"She\" was supposed to be a beacon of hope. But now her anger and hatred have turned into flames of war and are about to engulf the people.\n<br><br>\nOnly Rhodes Island, a neutral organization, can stop Reunion's rampage and the conspiracy behind it. Amiya and the others head towards Chernobog's Core City, which is on a collision course with Lungmen. What fate awaits them there...\n<br><br>\n(Source: Official Site, translated, edited)"
     },
     {
       "id": "tt36469298",
@@ -239,7 +239,7 @@
       "description": "Genres: Comedy, Drama, Slice of Life, Supernatural\nTags:Seinen\n<i>\"I won't die 'cause I was banned from the afterlife.\"</i><br><br>\n\nA shady self-proclaimed hermit named Momoyuki Mogura, AKA: Mogura, is banned from the afterlife due to an incident. Now he collects spirit possessed will-o'-wisps in his lantern, hoping to make a comeback.<br><br>\n\nIt seems that those who encounter him begin to see peculiar things.<br><br>\n\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt26471411",
+      "id": "tt31019484",
       "type": "series",
       "name": "With You and the Rain",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180425-c97mbuFNlTzw.jpg",
@@ -337,18 +337,18 @@
       "description": "Genres: Action, Drama\nTags:Inn/Assassins/Female Protagonist/Male Protagonist\nThe most exquisite hotels in the world have certain standards: the finest food, the most sublime comfort, captivating entertainment, the latest weapons, reliable identity fabrication, and untraceable corpse disposal.\n<br><br>\nThe name of this place where the people who have “forgotten their humanity” visit is “Hotel Inhumans.” The hitmen guests are welcomed by the concierges who never say \"no.\""
     },
     {
-      "id": "kitsu:48476",
+      "id": "tt37205655",
       "type": "series",
       "name": "Nukitashi THE ANIMATION",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx174188-fZg8iePD9Dca.jpg",
-      "description": "Genres: Comedy, Drama, Ecchi, Romance\nTags:Coastal/Primarily Teen Cast/Male Protagonist/Nudity/School/Primarily Female Cast\nSeiran Island. Even here in paradise, there are those who work in the shadows to bring it down...\n<br><br>\nUnited, these misfits stand side by side as the secret society NLNS. As their founder and head honcho, I, Junnosuke Tachibana, won’t stop until we’ve crushed this crazy law once and for all!\n<br><br>\nI’ve even found a benefactor in this crusty old rich guy, name unknown... He’s hooked us up with a secret base and a buttload of cash already. In return, he wants us to find someone and “protect her at all costs.” Apparently, she holds the key to our mission’s success...?\n<br><br>\nIn which case, there’s only one thing to do: locate this mystery girl. And all while keeping the SHO off our scent, too...\n<br><br>\nMake no mistake! I’ll stop that law in its tracks, just wait and see!\n<br><br>\n(Source: Steam)"
+      "description": "Genres: Action, Comedy, Drama, Ecchi, Romance\nTags:Coastal/Primarily Teen Cast/Male Protagonist/Nudity/School/Primarily Female Cast\nThe island of the everlasting summer, Seiran Island.\n<br><br>\nJunnosuke Tachibana, who was born on this island, returns with his younger sister, Asane Tachibana, after the death of their parents.\n<br><br>\nHowever, Seiran Island has become a place of madness due to the implementation of the “Perverted Law,” a law designed to combat population decline. This law permits and even encourages lewd sex acts everywhere on the island, and refusing to engage in “reproductive activities” is punished almost as severely as a crime.\n<br><br>\nJunnosuke, a proud virgin and staunch defender of virginity, questions the legitimacy of this law. Determined to protect both his and his beloved sister’s purity, he forms the anti-copulation front NLNS (No Love No Sex) and sets out to destroy the Perveted Law once and for all.\n<br><br>\n“I’ll… destroy the Perverted Law!”\n<br><br>\n(Source: Official Site, translated)"
     },
     {
       "id": "tt35677101",
       "type": "series",
       "name": "Kizetsu Yuusha to Ansatsu Hime",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b186561-ZRHGIXr6JOSC.jpg",
-      "description": "Genres: Action, Comedy, Fantasy\nTags:Female Harem\nHero Toto possesses great skills, but his extreme shyness has left him unable to form a party, causing him to remain stuck in the town where his journey began.\n<br><br>\nOne day, he is suddenly invited to join a party by three beautiful women—Ciel, Anemone, and Gore. Overjoyed at finally setting off on an adventure, Toto is filled with excitement... but little does he know, these women are dead set on killing him!\n<br><br>\nA deathly harem romcom unfolds as the socially anxious hero, who faints from mere flustered excitement around women, finds himself the target of three deadly companions, each with their own reasons for wanting him gone!"
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186561-svLOWbfahG5V.png",
+      "description": "Genres: Action, Comedy, Fantasy\nTags:Female Harem/Medieval\nHero Toto possesses great skills, but his extreme shyness has left him unable to form a party, causing him to remain stuck in the town where his journey began.\n<br><br>\nOne day, he is suddenly invited to join a party by three beautiful women—Ciel, Anemone, and Gore. Overjoyed at finally setting off on an adventure, Toto is filled with excitement... but little does he know, these women are dead set on killing him!\n<br><br>\nA deathly harem romcom unfolds as the socially anxious hero, who faints from mere flustered excitement around women, finds himself the target of three deadly companions, each with their own reasons for wanting him gone!\n<br><br>\n<i>Note: Each episode streamed 1 week early on ABEMA. The original TV broadcast started on July 12th 2025.<i>"
     }
   ]
 }
