--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -61,7 +61,7 @@
       "type": "series",
       "name": "The Summer Hikaru Died",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177689-d0mB5nYgdnhi.jpg",
-      "description": "Genres: Horror, Mystery, Psychological, Supernatural, Thriller\nTags:Cosmic Horror/Unrequited Love/Rural/Male Protagonist/Monster Boy/Primarily Teen Cast/Seinen/LGBTQ+ Themes\nTwo best friends living in a rural Japanese village: Yoshiki and Hikaru. Growing up together, they were inseparable… until the day Hikaru came back from the mountains, and was no longer himself. “Something” has taken over Hikaru’s body, memories, feelings… and everything they know begins to unravel.<br>\n<br>\n(Source: Netflix)"
+      "description": "Genres: Horror, Mystery, Psychological, Supernatural, Thriller\nTags:Cosmic Horror/Rural/Male Protagonist/Monster Boy/Primarily Teen Cast/Unrequited Love/Seinen/LGBTQ+ Themes\nTwo best friends living in a rural Japanese village: Yoshiki and Hikaru. Growing up together, they were inseparable… until the day Hikaru came back from the mountains, and was no longer himself. “Something” has taken over Hikaru’s body, memories, feelings… and everything they know begins to unravel.<br>\n<br>\n(Source: Netflix)"
     },
     {
       "id": "tt33060122",
@@ -99,7 +99,7 @@
       "description": "Genres: Action, Adventure, Fantasy, Slice of Life\nTags:Isekai/Magic/Medieval\nThe second season of <i>Tensei Shitara Dai Nana Ouji Dattanode, Kimamani Majutsu wo Kiwamemasu</i>."
     },
     {
-      "id": "kitsu:49033",
+      "id": "tt11448214",
       "type": "series",
       "name": "Rent-a-Girlfriend Season 4",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179344-bKIcCKDWDJdO.png",
@@ -117,7 +117,7 @@
       "type": "series",
       "name": "CITY THE ANIMATION",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181841-xg2brEzNHvjU.png",
-      "description": "Genres: Comedy, Slice of Life\nTags:Seinen/Slapstick/Urban/Female Protagonist/Ensemble Cast\nThis town, is not just a normal town.<br>\nThere's laughter, love and emotional moments.<br>\nAn unpredictable ordinary life presented by the residents.<br>\nExciting stuffs come one after another. Welcome to CITY. \n<br><br>\n(Source: Kyoto Animation)"
+      "description": "Genres: Comedy, Slice of Life\nTags:Seinen/Slapstick/Urban/Female Protagonist/Ensemble Cast/Surreal Comedy/Primarily Adult Cast/College\nThis town, is not just a normal town.<br>\nThere's laughter, love and emotional moments.<br>\nAn unpredictable ordinary life presented by the residents.<br>\nExciting stuffs come one after another. Welcome to CITY. \n<br><br>\n(Source: Kyoto Animation)"
     },
     {
       "id": "tt33317800",
@@ -152,7 +152,7 @@
       "type": "series",
       "name": "Takopii no Genzai",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185407-K8o5pta80AU0.jpg",
-      "description": "Genres: Drama, Psychological, Sci-Fi\nTags:Bullying/Denpa/Shounen/Female Protagonist/Aliens\nTakopi travels from his home of Happy Planet to spread happiness across Earth, but meets the unsmiling Shizuka upon landing. Her friends at school and home life seem to be the source of her somber expression—and the pure-hearted Takopi is determined to change things for the better! But what truths await him when the curtains rise in this shocking drama?!\n<br><br>\n(Source: MANGA Plus)"
+      "description": "Genres: Drama, Psychological, Sci-Fi\nTags:Bullying/Denpa/Female Protagonist/Aliens/Shounen\nTakopi travels from his home of Happy Planet to spread happiness across Earth, but meets the unsmiling Shizuka upon landing. Her friends at school and home life seem to be the source of her somber expression—and the pure-hearted Takopi is determined to change things for the better! But what truths await him when the curtains rise in this shocking drama?!\n<br><br>\n(Source: MANGA Plus)"
     },
     {
       "id": "tt32731400",
@@ -208,14 +208,7 @@
       "type": "series",
       "name": "Mikadono Sanshimai wa Angai, Choroi.",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178886-Q79QMeGQAJL7.jpg",
-      "description": "Genres: Comedy, Romance\nTags:Shounen/Heterosexual/School\nThough Ayase Yuu is the son of a renowned and talented actress, he is below average in anything he does. He is entrusted to live under the care of his mother's friend and later discovers that he will also be rooming with the three sisters from his school who possess both beauty and talent. Though Yuu thought that an understanding would be impossible to reach between an ordinary person and those blessed with talent, the three sisters are surprisingly...?!"
-    },
-    {
-      "id": "tt35652446",
-      "type": "series",
-      "name": "Bad Girl",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178675-ABQbvWvnDvKh.png",
-      "description": "Genres: Comedy\nTags:School/Female Protagonist/Primarily Female Cast/Cute Girls Doing Cute Things/Primarily Teen Cast/Yuri/Delinquents/LGBTQ+ Themes\nThe story follows Yuu Yutani, a first-year high school student who is a good girl. However, to attract the attention of the school's disciplinary committee chairman and \"madonna\" Atori Mizutori, she begins to act like a delinquent.<br>\n<br>\n(Source: Anime News Network)"
+      "description": "Genres: Comedy, Romance\nTags:Shounen/Male Protagonist/Heterosexual/School/Tomboy\nThough Ayase Yuu is the son of a renowned and talented actress, he is below average in anything he does. He is entrusted to live under the care of his mother's friend and later discovers that he will also be rooming with the three sisters from his school who possess both beauty and talent. Though Yuu thought that an understanding would be impossible to reach between an ordinary person and those blessed with talent, the three sisters are surprisingly...?!"
     },
     {
       "id": "tt32535912",
@@ -223,6 +216,13 @@
       "name": "Watari-kun's ****** Is about to Collapse",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169420-ZnJA9y23b4ee.png",
       "description": "Genres: Comedy, Drama, Romance, Slice of Life\nTags:Love Triangle/School/Female Harem/Kuudere/Yandere\nNaoto Watari lives solely for his little sister, Suzushiro, until his chaotic childhood friend, Satsuki, storms back into his life. Without uttering a single word, her very presence ignites buried memories and unravels his rigid routine. As tensions rise and secrets surface, Naoto’s devotion to Suzushiro clashes with unresolved pain, threatening to collapse his fragile world.<br>\n<br>\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt35652446",
+      "type": "series",
+      "name": "Bad Girl",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178675-ABQbvWvnDvKh.png",
+      "description": "Genres: Comedy\nTags:School/Female Protagonist/Primarily Female Cast/Cute Girls Doing Cute Things/Primarily Teen Cast/Yuri/Delinquents/LGBTQ+ Themes\nThe story follows Yuu Yutani, a first-year high school student who is a good girl. However, to attract the attention of the school's disciplinary committee chairman and \"madonna\" Atori Mizutori, she begins to act like a delinquent.<br>\n<br>\n(Source: Anime News Network)"
     },
     {
       "id": "tt36592820",
@@ -239,18 +239,11 @@
       "description": "Genres: Comedy, Drama, Slice of Life, Supernatural\nTags:Seinen\n<i>\"I won't die 'cause I was banned from the afterlife.\"</i><br><br>\n\nA shady self-proclaimed hermit named Momoyuki Mogura, AKA: Mogura, is banned from the afterlife due to an incident. Now he collects spirit possessed will-o'-wisps in his lantern, hoping to make a comeback.<br><br>\n\nIt seems that those who encounter him begin to see peculiar things.<br><br>\n\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt31019484",
+      "id": "tt36693655",
       "type": "series",
       "name": "With You and the Rain",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180425-c97mbuFNlTzw.jpg",
       "description": "Genres: Comedy, Slice of Life\nTags:Seinen/Female Protagonist/Animals/Primarily Adult Cast/Urban\nOn a rainy day, Fuji meets a cute critter posing as a dog and offering an umbrella and a cue card that says, “Please take me home” and she can’t resist. With this dog-poster’s quirky charm and mysterious ways, life together becomes a heartwarming adventure of friendship and shared seasons.\n<br><br>\n(Source: Crunchyroll)"
-    },
-    {
-      "id": "tt34754751",
-      "type": "series",
-      "name": "Hell Teacher: Jigoku Sensei Nube (2025)",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179678-1isykDVghv8Q.png",
-      "description": "Genres: Action, Comedy, Horror, Supernatural\nTags:Teacher/Shounen/Youkai/Demons/Exorcism/School/Primarily Child Cast\nA new anime project for <i>Jigoku Sensei Nube</i>.\n<br><br>\nThe story follows Meisuke Nueno, aka \"Nube,\" a psychic teacher with a demon hand, as he battles evil spirits and monsters to protect his students in this saga that employs elements of Japanese mythology and folklore to tell a fan-pleasing action story.\n<br><br>\nKnown for its occult and horror elements on school ghost stories and urban legends, Nube captivated readers across generations with his heroic efforts to save his students from supernatural threats."
     },
     {
       "id": "tt32991344",
@@ -258,6 +251,13 @@
       "name": "Clevatess",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178869-iNDlhrWx01tN.jpg",
       "description": "Genres: Action, Drama, Fantasy\nTags:Anti-Hero/Demons/Swordplay/Gore\nThe story centers on the the titular Clevatess, the lord of Dark Beasts, who wields both uncanny intellect and destructive power. Frustrated by the 13 heroes tasked to destroy him, he has decided to be rid of humanity once and for all. However, he has been charged with one nuisance: he revived a hero he personally slayed and adopts an orphaned humanoid baby—the last hope to save a dying world. The world stands upon the brink of Armageddon, with the obligation of raising one child holding it all back. Now bound together, what fate awaits this unlikely trio?<br>\n<br>\n(Source: Anime News Network, Crunchyroll, edited)"
+    },
+    {
+      "id": "tt34754751",
+      "type": "series",
+      "name": "Hell Teacher: Jigoku Sensei Nube (2025)",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179678-1isykDVghv8Q.png",
+      "description": "Genres: Action, Comedy, Horror, Supernatural\nTags:Teacher/Shounen/Youkai/Demons/Exorcism/School/Primarily Child Cast\nA new anime project for <i>Jigoku Sensei Nube</i>.\n<br><br>\nThe story follows Meisuke Nueno, aka \"Nube,\" a psychic teacher with a demon hand, as he battles evil spirits and monsters to protect his students in this saga that employs elements of Japanese mythology and folklore to tell a fan-pleasing action story.\n<br><br>\nKnown for its occult and horror elements on school ghost stories and urban legends, Nube captivated readers across generations with his heroic efforts to save his students from supernatural threats."
     },
     {
       "id": "tt35652469",
